--- a/views/user/addressmanagement.ejs
+++ b/views/user/addressmanagement.ejs
@@ -226,6 +226,7 @@
             </div>
         </div>
     </div>
+     <%-include("../../views/partials/user/footer")-%>
     <script>
        
         const toggleButton = document.getElementById('toggleAddressForm');
