--- a/views/user/wallet.ejs
+++ b/views/user/wallet.ejs
@@ -212,6 +212,7 @@
         </div>
       </div>
     </div>
+     <%-include("../../views/partials/user/footer")-%>
   </body>
 
   <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
