--- a/views/admin/couponManagement.ejs
+++ b/views/admin/couponManagement.ejs
@@ -7,6 +7,7 @@
     <title>Coupon Management | Mambraville Admin</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+      <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 
 <body class="bg-gray-100">
@@ -66,9 +67,7 @@
                                             <th
                                                 class="px-6 py-4 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
                                                 Expiry Date</th>
-                                            <th
-                                                class="px-6 py-4 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-                                                Status</th>
+                                            
                                             <th
                                                 class="px-6 py-4 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
                                                 Actions</th>
@@ -83,7 +82,7 @@
                                                     <%=coupon.code %>
                                                 </td>
                                                 <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-600">
-                                                    <%=coupon.discountType%>
+                                                    <%=coupon.discountValue%>
                                                 </td>
                                                 <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-600">
                                                     <%=coupon.discountType%>
@@ -92,24 +91,21 @@
                                                     <%=coupon.code %>
                                                 </td>
                                                 <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-600">
-                                                    <%=coupon.expiryDate %>
+                                                    <%=coupon.expiryDate.toLocaleDateString("en-In",{
+                                                        day:"2-digit",
+                                                        month:"short",
+                                                        year:"numeric"
+                                                    }) %>
                                                 </td>
-                                                <td class="px-6 py-4 whitespace-nowrap">
-                                                    <span
-                                                        class="px-3 py-1 inline-flex text-xs leading-5 font-semibold rounded-full bg-green-100 text-green-800">
-                                                        <%= coupon.isActive %>
-                                                    </span>
-                                                </td>
+                                               
                                                 <td class="px-6 py-4 whitespace-nowrap text-sm font-medium space-x-3">
                                                     <a href="/admin/coupons/edit/1"
                                                         class="text-indigo-600 hover:text-indigo-900">
                                                         <i class="fas fa-edit"></i> Edit
                                                     </a>
-                                                    <a href="/admin/coupon/delete/<%= coupon._id %>"
-                                                        onclick="return confirm('Are you sure you want to delete this coupon?')"
-                                                        class="text-red-600 hover:text-red-900">
-                                                        <i class="fas fa-trash-alt"></i> Delete
-                                                    </a>
+                                                   <button  onclick="deleteCoupon('<%= coupon._id %>')" class="text-red-600 hover:text-red-800">
+                                                        <i class="fas fa-trash"></i>
+                                                   </button>
                                                 </td>
                                             </tr>
                                             <%})%>
@@ -141,6 +137,26 @@
                 </main>
             </div>
     </div>
+    <script>
+        function deleteCoupon(couponId){
+            Swal.fire({
+                title:"Are you sure?",
+                text:"This will permanently delete the Coupon!",
+                icon:"Warning",
+                showCancelButton:true,
+                confirmButtonColor:"#3085d6",
+                cancelButtonColor:"#d33",
+                confirmButtonText:"Yes, delete it"
+            }).then((result)=>{
+                if(result.isConfirmed){
+                    window.location.href = `/admin/coupon/delete/${couponId}`;
+                }
+            });
+        }
+
+
+        
+    </script>
 
 </body>
 
